src/components/Footer.css
footer {
    display:flex;
    flex-direction: column;
    background-color: #191919;
    align-items: center;
}

.content {
    width: 60%;
    padding-left: 20px;
}

.content h2 {
    color: #fff;
}

.email-items {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
}

.email-item {
    display: flex;
    gap: 10px;
    align-items: center;
}

.email-item img {
    height: 25px;
    width: 25px;
}

.social-items {
    display: flex;
    flex-direction: row;
    gap: 10px;
    margin-bottom: 15px;
}

.social-item img {
    height: 50px;
    width: 50px;
}

